--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,19 +20,11 @@
     {% include indexBottomPanel.html %}
   </body>
 
-  <!-- <script src="js/jquery-2.1.3.min.js"/> -->
+  <script src="js/jquery-2.1.3.min.js"/>
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script type="text/javascript">
         /** VAR Initialization **/
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
-      var mondayPracticeData = "";
-      var tuesdayPracticeData = "";
-      var wednesdayPracticeData = "";
-      var thursdayPracticeData = "";
-      var fridayPracticeData = "";
-      var saturdayPracticeData = "";
-      var sundayPracticeData = "";
-
       /** VAR collection and view population from firebase **/
       firebaseReference.on("value", function(snapshot) {
         practiceData = snapshot.val();
