--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
   <script src="js/jquery-2.1.3.min.js"/>
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script type="text/javascript">
+    $(document).ready(){
         /** VAR Initialization **/
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
       /** VAR collection and view population from firebase **/
@@ -30,6 +31,6 @@
         practiceData = snapshot.val();
         $("#PracticeList").append("<li class=\"list-group-item\">"+practiceData.Tuesday+"</li>");
       });
-
+    }
   </script>
 </html>
