--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,15 @@
   <script type="text/javascript">
         /** VAR Initialization **/
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
-      
+
       /** VAR collection and view population from firebase **/
       firebaseReference.on("value", function(snapshot) {
         practiceData = snapshot.val();
         alert(practiceData.Monday); 
         alert(practiceData.Tuesday);  
+        document.getElementById("Tuesday").innerHTML = practiceData.Tuesday;
       });
+
+
   </script>
 </html>
