--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,20 +31,17 @@
       /** VAR collection and view population from firebase **/
       firebaseReference.on("value", function(snapshot) {
         practiceData = snapshot.val();
-        alert(practiceData.Monday); 
-        // alert(practiceData.Tuesday);  
         document.getElementById("PracticeList").innerHTML = concatinatePracticeSchedule(practiceData);
-
       });
 
       function concatinatePracticeSchedule(practiceData){
-        return listItemPrefix.concat(practiceData.Monday,listItemPostFix,
-          listItemPrefix,practiceData.Tuesday,listItemPostFix,
-          listItemPrefix,practiceData.Wednesday,listItemPostFix,
-          listItemPrefix,practiceData.Thursday,listItemPostFix,
-          listItemPrefix,practiceData.Friday,listItemPostFix,
-          listItemPrefix,practiceData.Saturday,listItemPostFix,
-          listItemPrefix,practiceData.Sunday,listItemPostFix);          
+        return listItemPrefix.concat("<b>Monday: </b>",practiceData.Monday,listItemPostFix,
+          "<b>Tuesday: </b>",listItemPrefix,practiceData.Tuesday,listItemPostFix,
+          "<b>Wednesday: </b>",listItemPrefix,practiceData.Wednesday,listItemPostFix,
+          "<b>Thursday: </b>",listItemPrefix,practiceData.Thursday,listItemPostFix,
+          "<b>Friday: </b>",listItemPrefix,practiceData.Friday,listItemPostFix,
+          "<b>Saturday: </b>",listItemPrefix,practiceData.Saturday,listItemPostFix,
+          "<b>Sunday: </b>",listItemPrefix,practiceData.Sunday,listItemPostFix);          
       }
   </script>
 </html>
