--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,6 @@
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
    retrieveAndPopulateOfficerData();
+   retrieveAndPopulateRaceData();
   </script>
 </html>
