--- a/_layouts/membersLayout.html
+++ b/_layouts/membersLayout.html
@@ -17,6 +17,24 @@
   <body>
     {% include navbar.html %}
     {% include membersList.html %}
+     <div class="dialog">
+    
+      <div class="content">
+        <div class="title">Permission</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+      </div>
+    
+      <div class="button label-blue">
+        <div class="center" fit>ACCEPT</div>
+        <paper-ripple fit></paper-ripple>
+      </div>
+      
+      <div class="button">
+        <div class="center" fit>DECLINE</div>
+        <paper-ripple fit></paper-ripple>
+      </div>
+    
+    </div>
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
