--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,10 @@ section {
       text-align: center;
     }
 
+    .top-buffer {
+     margin-top:20px;
+    }
+
 /************
     NAVBAR
 *************/
