--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/ct-navbar.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -23,6 +24,7 @@
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
+  <script src="js/ct-navbar.js"></script>
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
    retrieveAndPopulateOfficerData();
