--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,12 +14,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-inverse navbar-right">
-        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="/index.html">Join</a></li>
-        <li><a href="/sponsors.html">Sponsors</a></li>
-        <li><a href="members.html">Members</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li id="homeNavBarItem" class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li id="joinNavBarItem"><a href="/index.html">Join</a></li>
+        <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li>
+        <li id="membersNavBarItem"><a href="members.html">Members</a></li>
+        <li id="newsNavBarItem"><a href="news.html">News</a></li>
+        <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   <!-- </div>/.navbar-fluid -->
