--- a/_layouts/membersLayout.html
+++ b/_layouts/membersLayout.html
@@ -25,5 +25,6 @@
   <script src="js/firebase.js"></script>
   <script type="text/javascript">
    retrieveAndPopulateMemberData();
+   updateNavbarToMembersPage();
   </script>
 </html>
