--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ section {
 }
 
 .bg-1 {
-	background: url('/img/cover.png') no-repeat center center fixed;
+	background: url('/img/cover.jpg') no-repeat center center fixed;
     color:#fff;
     background-size:cover;
 }  
