--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,9 +16,9 @@
       <ul class="nav navbar-nav navbar-inverse navbar-right">
         <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li>
         <li id="joinNavBarItem"><a href="/index.html">Join</a></li>
-        <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li>
+        <!-- <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li> -->
         <li id="membersNavBarItem"><a href="members.html">Members</a></li>
-        <li id="newsNavBarItem"><a href="news.html">News</a></li>
+        <!-- <li id="newsNavBarItem"><a href="news.html">News</a></li> -->
         <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
