--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading"><h3>Practice Schedule</h3></div>
+        <div class="panel-heading"><h3>Summer Practice Schedule</h3></div>
         <div class="panel-body">
           <ul class="list-group" id="PracticeList"/>
         </div><!-- panelBody -->
