--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ h1 {
   CAROUSEL
 ************/
 .carousel{
-    background: #2f4357;
-    margin-top: 20px;
+    background: url('/img/placeholder.png') no-repeat center center fixed;
+    margin-top: 5px;
 }
 .carousel .item img{
     margin: 0 auto; /* Align slide image horizontally center */
