--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
