--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,7 +17,8 @@
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
         <!-- <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li> -->
-        <li id="membersNavBarItem"><a href="members.html">Members</a></li>
+        <!-- <li id="membersNavBarItem"><a href="members.html">Members</a></li> -->
+        <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
         <!-- <li id="newsNavBarItem"><a href="news.html">News</a></li> -->
         <!-- <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li> -->
         <li id="aboutNavBarItem"><a href="about.html">About Us</a></li>
