--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ h1 {
   padding-bottom: 20px;
 }
 
+.member-title{
+  color: #9E9E9E;
+}
+
 .member-image{
   max-width: 280px;
   max-height: 280px;
