--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -8,13 +8,19 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="/img/cover.jpg" alt="First Slide">
+                <img src="/img/coverMain" alt="First Slide">
             </div>
             <div class="item">
-                <img src="/img/cover2.jpg" alt="Second Slide">
+                <img src="/img/cover2" alt="Second Slide">
             </div>
             <div class="item">
                 <img src="/img/cover3.jpg" alt="Third Slide">
+            </div>
+            <div class="item">
+                <img src="/img/cover4.jpg" alt="Third Slide">
+            </div>
+            <div class="item">
+                <img src="/img/cover5.jpg" alt="Third Slide">
             </div>
         </div>
         <!-- Carousel controls -->
