--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -8,10 +8,10 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="/img/coverMain" alt="First Slide">
+                <img src="/img/coverMain.jpg" alt="First Slide">
             </div>
             <div class="item">
-                <img src="/img/cover2" alt="Second Slide">
+                <img src="/img/cover2.jpg" alt="Second Slide">
             </div>
             <div class="item">
                 <img src="/img/cover3.jpg" alt="Third Slide">
